5338 endre adressetypekode basert paa adresse (#1631)
* Setter bostedsadressetype fra brevdata om den finnes. Setter denne i A001Mapper basert på om vi bruker bostedsadressen eller kontaktadressen.

* Fjerner optional

* Flytter logikk for adresse og type ut i egen funksjon

* Ser om det er parallell-kjøring som gjør at testene feiler

* Bytter om til singletonMap

* Disabler midlertidig en test

* Setter dummmy-låsreferanse dersom status er på vent siden dette i disse tilfellene er forventet

* Import kom med